--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<p>erex codes</p>
+<div class="main">
+  <img src="../assets/images/binary-trex.png" alt="trex filled with binary">
+  <div class="title">Coming Soon</div>
+</div>
+
+
+
+
+
