--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-    font-family: MarketDeco;
+    font-family: ChampLimo;
     font-weight: bold;
     color: rgb(15, 15, 15);
     font-size: 3vw;
