--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,8 @@ body {
     font-family: "LemonMilk";
     src:url('assets/fonts/LEMONMILK-Regular.otf') format("opentype");
 }
+
+@font-face {
+    font-family: "ChampLimo";
+    src:url('assets/fonts/Champagne\ &\ Limousines.ttf') format("truetype");
+}
