--- a/src/styles.css
+++ b/src/styles.css
@@ -23,5 +23,5 @@ body {
 
 @font-face {
     font-family: "ChampLimo";
-    src:url('assets/fonts/Champagne\ &\ Limousines.ttf') format("truetype");
+    src:url('assets/fonts/ChampagneLimousines.ttf') format("truetype");
 }
