Add aws support

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="main">
-  <img src="../assets/images/binary-trex.png" alt="trex filled with binary">
-  <div class="title">Coming Soon</div>
+  <router-outlet></router-outlet>
 </div>
 
 
